# TierList

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  db_query.sql  printdb.cpp  printdb.h  printdb.hpp  printtl.cpp  printtl.h  printtl.hpp  reset_db.sql  tier.cpp  tier_A.db
.github/workflows/: c-cpp.yml
